Changing the hover text color on hover for acord section.

--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,7 @@ body{
 }
 .propuestas__list .acord__btn:hover {
     background-color: var(--light-medium-blue);
+    color: #000;
 }
 
 .propuestas__list .acord__btn:after {
