--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ body{
 }
 .propuestas__list .acord__btn:hover {
     background-color: var(--light-medium-blue);
-    color: #000;
+    color: #fff;
 }
 
 .propuestas__list .acord__btn:after {
